--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue">#0074BC</color>
+    <color name="yellow">#FFCC04</color>
+    <color name="gradient">#58ACDB00</color>
 </resources>
+
